--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,13 @@
     <groupId>org.example</groupId>
     <artifactId>MoxfieldClient</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+<dependencies>
+    <dependency>
+        <groupId>com.googlecode.lanterna</groupId>
+        <artifactId>lanterna</artifactId>
+        <version>3.1.2</version>
+    </dependency>
+</dependencies>
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
