--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,12 @@
         <artifactId>lanterna</artifactId>
         <version>3.1.2</version>
     </dependency>
+    <dependency>
+        <groupId>moe.scar</groupId>
+        <artifactId>DeckPlaintextExporter</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <scope>compile</scope>
+    </dependency>
 </dependencies>
     <build>
         <plugins>
