--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <dependency>
         <groupId>moe.scar</groupId>
         <artifactId>DeckPlaintextExporter</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
         <scope>compile</scope>
     </dependency>
 </dependencies>
